# vedirect-rs

./: CHANGELOG.md  Cargo.toml  README.md
examples/: read_serial.rs
src/: data.rs
