[package]
name = "vedirect"
version = "0.3.0"
edition = "2021"

license = "Unlicense"
description = "Library to parse the Victron Energy VE.Direct protocol and map the data to useful structs with clear units"
repository = "https://github.com/dbr/vedirect-rs/"
readme = "README.md"
keywords = ["solar", "serial", "parser", "vedirect"]
exclude = ["/fuzz-target"]

[dependencies]
thiserror = "1.0"
strum = "0.24"
strum_macros = "0.24"

serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serialport = { version = "4.1", default-features = false }
anyhow = "1.0"

[features]
default = []
derive = ["serde"]